// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`popup > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="«r0»"
      aria-describedby="«r0»"
      class="styles__w40vpo9"
      tabindex="0"
    >
      Hover me
    </div>
  </div>
</DocumentFragment>
`;

exports[`popup > should render correctly without text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    Hover me
  </div>
</DocumentFragment>
`;
